Fix my name on mobile

--- a/src/app/shared/side-navbar/side-navbar.component.css
+++ b/src/app/shared/side-navbar/side-navbar.component.css
@@ -9,10 +9,9 @@
   width: 300px;
   height: 100%;
   color: #e1ffff;
-
 }
 .nav-side-menu .brand {
-  background-color: #2574AF;
+  background-color: #2574af;
   line-height: 50px;
   display: block;
   text-align: center;
@@ -311,5 +310,19 @@ body {
       width: 40px;
       text-align: center;
     }
+
   }
+}
+
+.alex {
+  font-size: x-large;
+}
+
+.alexMoshinsky {
+  font-size: x-large;
+  line-height: 10px;
+}
+
+.fullStack {
+  line-height: 60px;
 }
